Add port dao (#14)
* Add tile dao

* Implement tile dao methods

* Remove any from Tile daos

* Modify front end Map

* Add TileDao tests for insert and update

* Refactor front end for zoom and tile lookup

* Add images for database image creation

* Add additional tests for tiles

* Refactor front end

* Add more test coverage for Tiles

* Add interfaces and logic for plotting ports/querying database on interval

* Add concurrently and scripts

* Add Port DAO and front end port rendering

* Add port tests and port controller/routing

* Implement port plotting for front end

* Update branch for .env change

--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -7,6 +7,7 @@ body {
   margin: 0;
   background-color: $light-color;
   font-family: $primary-font;
+  font-size: 12px;
 }
 
 .map-container {
@@ -199,4 +200,10 @@ input[type="text"] {
 
 .p-2 {
   padding: 2rem;
+}
+
+.small {
+  font-size: .05rem;
+  font-family: $primary-font;
+  font-weight: 600;
 }
