--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -195,6 +195,20 @@ input[type="text"] {
   font-weight: 600;
 }
 
+.alert {
+  background: #FF0000BB;
+  color: white;
+  position: absolute;
+  top: 15px;
+  z-index: 255;
+  display: block;
+  width: 100%;
+  padding: 5px;
+  box-shadow: 0px 1px -5px darken($light-color, 15%);
+  text-align: center;
+  font-size: 1rem;
+}
+
 @media only screen and (max-width: 768px) {
   .panel-container {
     width: 100%;
